--- a/.gitignore
+++ b/.gitignore
@@ -211,4 +211,7 @@ dev-debug.log
 # OS specific
 # Task files
 tasks.json
-tasks/ 
+/tasks/
+!src/tasks/
+
+# End of https://www.toptal.com/developers/gitignore/api/node 
