--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,7 +46,8 @@ jobs:
             build: |-
               set -e &&
               apt-get update -y &&
-              apt-get install -y g++-aarch64-linux-gnu libc6-dev-arm64-cross &&
+              apt-get install -y g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu &&
+              cp /usr/aarch64-linux-gnu/include/features.h /usr/aarch64-unknown-linux-gnu/aarch64-unknown-linux-gnu/sysroot/usr/include/ || true &&
               rustup target add aarch64-unknown-linux-gnu &&
               yarn build --target aarch64-unknown-linux-gnu &&
               aarch64-linux-gnu-strip *.node
