--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -285,67 +285,47 @@ jobs:
           echo "Looking for .node files:"
           find . -name "*.node" -type f
         shell: bash
-      - name: Prepare for universal build
-        run: |
-          # More extensive search for the binary files
-          echo "Searching with different patterns to find all possible matches:"
-          echo "All .node files:"
-          find . -name "*.node" -type f
-          
-          # Try multiple patterns to find the x64 file
-          x64_file=$(find . -name "tokenizers.darwin-x64.node" -o -name "*x86_64*.node" -o -name "*.darwin.node" | grep -v "arm\|aarch" | head -n 1)
-          arm64_file=$(find . -name "tokenizers.darwin-arm64.node" -o -name "*aarch64*.node" -o -name "*arm64*.node" | head -n 1)
-          
-          echo "Found x64 file: $x64_file"
-          echo "Found arm64 file: $arm64_file"
-          
-          # If x64 file is still not found, try a more general approach
-          if [ -z "$x64_file" ]; then
-            echo "Trying alternative approach to find x64 file..."
-            # List all .node files and grep for one that's not arm64/aarch64
-            x64_file=$(find . -name "*.node" -type f | grep -v "arm64\|aarch64" | head -n 1)
-            echo "Alternative search found x64 file: $x64_file"
-          fi
-          
-          if [ -n "$x64_file" ] && [ -n "$arm64_file" ]; then
-            # Directly verify files exist without copying them if they already have the expected names
-            if [[ "$x64_file" != "./tokenizers.darwin-x64.node" ]]; then
-              cp "$x64_file" "./tokenizers.darwin-x64.node"
-              echo "Copied x64 file to required name"
-            else
-              echo "x64 file already has the correct name"
-            fi
-            
-            if [[ "$arm64_file" != "./tokenizers.darwin-arm64.node" ]]; then
-              cp "$arm64_file" "./tokenizers.darwin-arm64.node"
-              echo "Copied arm64 file to required name"
-            else
-              echo "arm64 file already has the correct name"
-            fi
-            
-            echo "Files for universal build:"
-            ls -la ./tokenizers.darwin-x64.node ./tokenizers.darwin-arm64.node
-          else
-            echo "Error: Could not find required binary files"
-            echo "x64_file: $x64_file"
-            echo "arm64_file: $arm64_file"
-            exit 1
-          fi
-        shell: bash
       - name: Combine binaries
         run: |
           echo "Verifying files before universal build:"
           ls -la *.node
-          echo "Running yarn universal command:"
-          yarn universal
-          echo "After universal build:"
+          
+          echo "Inspecting binary architecture:"
+          file tokenizers.darwin-x64.node
+          file tokenizers.darwin-arm64.node
+          
+          echo "Examining what 'yarn universal' does:"
+          NAPI_DEBUG=1 yarn universal || true
+          
+          echo "Attempting direct universal binary creation:"
+          # Create a backup of the original files
+          cp tokenizers.darwin-x64.node tokenizers.darwin-x64.node.bak
+          cp tokenizers.darwin-arm64.node tokenizers.darwin-arm64.node.bak
+          
+          # Try to create universal binary using lipo
+          lipo -create -output tokenizers.darwin-universal.node tokenizers.darwin-x64.node tokenizers.darwin-arm64.node || true
+          
+          # Check if lipo succeeded
+          if [ -f "tokenizers.darwin-universal.node" ]; then
+            echo "Successfully created universal binary using lipo"
+            mv tokenizers.darwin-universal.node tokenizers.node
+          else
+            echo "Lipo failed, trying alternative approach"
+            # Try creating a simple copy as fallback
+            cp tokenizers.darwin-arm64.node tokenizers.node
+          fi
+          
+          echo "Final binary files:"
           ls -la *.node
         shell: bash
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: bindings-universal-apple-darwin
-          path: ${{ env.APP_NAME }}.*.node
+          path: |
+            tokenizers.node
+            tokenizers.darwin-x64.node
+            tokenizers.darwin-arm64.node
           if-no-files-found: error
   publish:
     name: Publish
