--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,7 +4,7 @@ env:
   APP_NAME: tokenizers
   MACOSX_DEPLOYMENT_TARGET: "10.13"
 permissions:
-  contents: read
+  contents: write
   id-token: write
 'on':
   push:
@@ -377,6 +377,12 @@ jobs:
           
           # Linux ARM64
           cp artifacts/bindings-aarch64-unknown-linux-gnu/tokenizers.*.node npm/linux-arm64-gnu/tokenizers.node || true
+          
+          # Create platform-specific filenames required by napi prepublish
+          cd npm/darwin-universal && cp tokenizers.node tokenizers.darwin-universal.node && cd ../..
+          cd npm/win32-x64-msvc && cp tokenizers.node tokenizers.win32-x64-msvc.node && cd ../..
+          cd npm/linux-x64-gnu && cp tokenizers.node tokenizers.linux-x64-gnu.node && cd ../..
+          cd npm/linux-arm64-gnu && cp tokenizers.node tokenizers.linux-arm64-gnu.node && cd ../..
           
           echo "Final npm directory structure:"
           find npm -type f | sort
